--- a/chapterAPPX_trends.tex
+++ b/chapterAPPX_trends.tex
@@ -3,8 +3,9 @@
 
 %Leave this here in order to start the whole on an odd-numbered page
 \cleardoublepage
-\chapter[Trends 2000-2019]{Trends in observations and EMEP MSC-W model calculations 2000-2019}
+\chapter[Trends 2000-2019]{Sites used for the trends calculations}
 \label{ch:appx_trends}
+This appendix contains information of which EMEP sites have been used in the trend analysis for the the different components and time periods presented in chapter \ref{ch:Trends}.
 
 \clearpage
 
