--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -147,6 +147,8 @@ One month later, during 24-26 July a new and even more intense (albeit shorter) 
 
 For the year 2019 as a whole, Figure~\ref{fig:indicators_emep} shows various modelled ozone metrics with the corresponding measured metrics based on the EMEP measurement sites plotted on top of the maps. Only stations located below 500 metres above sea level were used in this comparison to avoid uncertainties related to the extraction of model data in regions with complex topography. Figure ~\ref{fig:indicators_emep} shows a) maxO3 (= mean of the daily max ozone concentration) for the 6-month period April-September, b) SOMO35 (= Sum of Ozone Means Over 35 ppb), c) AOT40 for forests (= Accumulated Ozone exposure over a Threshold of 40 ppb) for the 6-month period April-September using the hours between 08 and 20, and Figure~\ref{fig:indicatorPOD} shows POD$_1$ for forests (= Phytotoxic Ozone Dose above a threshold 1 mmol m$^{-2}$). Figure~\ref{fig:indicatorPOD} shows only modelled POD$_1$ since measurements could not be calculated from the ozone monitoring data directly and could not be included.
 
+These plots indicate good agreement between these modelled and measured ozone metrics in general. The model and the measurements show an increasing gradient to the southeast as expected which reflects the strong dependency between surface ozone, temperature and solar radiation. 
+
 \begin{figure}[H]
   \centering
   \subfigure[maxO3]{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/MAXO3_AprSep_ModObs_emep_EMEP01.pdf}}
@@ -155,9 +157,6 @@ For the year 2019 as a whole, Figure~\ref{fig:indicators_emep} shows various mod
 \caption{Model results and observations at EMEP stations (triangles) for mean of daily maximum ozone concentrations (a) ([$ppb$], Apr-Sep), SOMO35 (b) [$ppb.d$] and AOT40 for forests (c) [$ppb.h$] in 2019. Only data from measurement sites below 500 m a.s.l. are shown.}
 \label{fig:indicators_emep}
 \end{figure}
-
-
-These plots indicate good agreement between these modelled and measured ozone metrics in general. The model and the measurements show an increasing gradient to the southeast as expected which reflects the strong dependency between surface ozone, temperature and solar radiation. 
 
 \begin{figure}[H]
   \centering{\includegraphics[clip=,angle=90,height=5.5cm,viewport=175 58 420 770]{FIGS_STATUS/POD1f_ModObs_emep_EMEP01.pdf}}
@@ -219,14 +218,23 @@ underestimates the observed annual mean of \PM[10] by 12\% and
 Overall, the year of 2019 was quite moderate with respect to PM air pollution in Europe, which was due to dominating meteorological conditions that year. It was relatively warm across the EMEP area (Figure~\ref{fig:metyear-avMET}), in particular in the cold half-year (Figure~\ref{fig:temp-avMET}). Mild winter conditions would mean less need for residential heating, resulting in lower emissions from this sector. Moreover, stagnant air conditions (with temperature inversion, low wind speed and thin mixing layer), typically causing elevated pollution levels, are less frequent in warm winters. Also, the spring/summer period was relatively warm (except from Russia, Kazakhstan, Finland, most of Sweden, Spain and Portugal). During those months, the higher temperatures would enhance evaporation of semi-volatile inorganic and organic aerosols (SIA and SOA), though the more efficient oxidation contributes to secondary aerosol formation. Furthermore, the year 2019 was relatively dry over most of Europe (except in the south and parts of Scandinavia), in EECCA countries, and most of Russia (except from the northern regions), as shown in Figure~\ref{fig:metyear-avMET}. However, the amount of precipitation was also relatively large in the cold half-year in Denmark, France, the UK and parts of Germany (Figure~\ref{fig:prec-avMET}). As documented in ~\citet{CAMS2020}, the wet end of the year in western and southern Europe was the most prominent feature of precipitation in 2019, with 
 November being particularly extreme, both in terms of the total rainfall amounts and the number of days with heavy rainfall. As wet scavenging is the main PM removal mechanism, this, combined with the mild winter temperatures, resulted in the lower levels of PM pollution in winter 2019 over most of Europe.   
 
+Figure~\ref{fig:PManomin2019} presents the relative anomalies of mean \PM[10] and \PM[2.5] concentrations in 2019 relative to 2000-2018 averages, based on the 2000-2019 trend runs performed with the EMEP MSC-W model using a consistent emission data-set based on officially submitted data, as documented in Chapter \ref{ch:Trends}. In order to look at the sole effect of meteorological conditions on PM pollution, also 2019 run used here is based on the reported emissions and thus different from the 2019 Status run (in which TNO's emissions for residential combustion are used, as documented in Section \ref{Mod_2019}). Figure~\ref{fig:PManomin2019} shows that the PM pollution in 2019 was relatively moderate, with annual mean concentrations being 5-20\% lower than the 2000-2018 averages over most of the EMEP domain, and 20-35\% lower compared to the 18-year average in Central Europe and over vast areas in the N/NE of Russia. Only along NW/N coasts in Fennoscandia, parts of Spain and some south-eastern regions (parts of Turkey, the Caucasus region and Central Asian countries), \PM[10] and \PM[2.5] levels in 2019 were higher relative to the 2000-2018 averages. 
+
+%\begin{figure}[H]
+%  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM10_2019_vs_2000-2018.pdf}}
+%  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM25_2019_vs_2000-2018.pdf}}
+%\caption{Relative anomalies of mean \PM[10] and \PM[2.5] in 2019 from the 2000-2018 mean.}
+%\label{fig:PManomin2019}
+%\end{figure}
+
 \begin{figure}[H]
-  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM10_2019_vs_2000-2018.pdf}}
-  \centering{\includegraphics[clip=,angle=90,height=3cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM25_2019_vs_2000-2018.pdf}}
+  \centering{\includegraphics[clip=,angle=90,height=5.9cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM10_2019_vs_2000-2018.pdf}}
+  \vspace{0.5cm}
+  \centering{\includegraphics[clip=,angle=90,height=5.9cm,viewport=175 67 448 754]{FIGS_PM/RelAnomaly_PM25_2019_vs_2000-2018.pdf}}
 \caption{Relative anomalies of mean \PM[10] and \PM[2.5] in 2019 from the 2000-2018 mean.}
 \label{fig:PManomin2019}
 \end{figure}
 
-Figure~\ref{fig:PManomin2019} presents the relative anomalies of mean \PM[10] and \PM[2.5] concentrations in 2019 relative to 2000-2018 averages, based on the 2000-2019 trend runs performed with the EMEP MSC-W model using a consistent emission data-set based on officially submitted data, as documented in Chapter \ref{ch:Trends}. In order to look at the sole effect of meteorological conditions on PM pollution, also 2019 run used here is based on the reported emissions and thus different from the 2019 Status run (in which TNO's emissions for residential combustion are used, as documented in Section \ref{Mod_2019}). Figure~\ref{fig:PManomin2019} shows that the PM pollution in 2019 was relatively moderate, with annual mean concentrations being 5-20\% lower than the 2000-2018 averages over most of the EMEP domain, and 20-35\% lower compared to the 18-year average in Central Europe and over vast areas in the N/NE of Russia. Only along NW/N coasts in Fennoscandia, parts of Spain and some south-eastern regions (parts of Turkey, the Caucasus region and Central Asian countries), \PM[10] and \PM[2.5] levels in 2019 were higher relative to the 2000-2018 averages. 
 
 
 \subsubsection[PM exceedances]{Exceedances of EU limit values and WHO Air Quality Guidelines in 2018}
@@ -297,10 +305,9 @@ The highest number of exceedance days was 40, observed at HU0002 and IT0004, fol
 
 The modelled number of exceedance days in 2019 shows in general a good correspondence with the observations, with somewhat better agreement for \PM[10] than for \PM[2.5]. For \PM[10], the model happens to underestimate the occurrence of exceedances of the EU limit value of 50 \ug for some central European sites, for instance for AT0002 and the Dutch sites NL0009 and NL0010 (no modelled exceedance days versus 5 observed), and in the Baltic for LV0010 (0 exceedance day vs. 6 observed). On the other hand, the model tends to overestimate the number of exceedance days at some Mediterranean sites, influenced by Saharan dust, e.g. at the Cypriot site CY0002 (21 vs. 4 observed) and several Spanish sites (in particular ES0007 with 21 vs. 2 observed). Most of the exceedances registered at the central European sites occurred during the winter (mainly caused by residential combustion) and in the spring (often due to agricultural emissions), while little exceedances occurred in the autumn 2019, which was rather wet. By contrast, at the Mediterranean sites the exceedances were more frequent during summer.
 
-For \PM[2.5], the model reproduces number of exceedance days at IT0004 (40), with most of then (61 \%) coinciding with the observed ones. However, it calculates 12 exceedance days versus 40 observed at HU0002, only 3 versus 30 observed at DE0044, and no exceedance days versus 26 observed at PL0005. At the Dutch sites, the model slightly underestimates observed \PM[2.5] exceedance days at NL0009 and NL0010, but overestimates those at NL0091 and NL0644 (same as for 2018 reported last year). Similar to \PM[10], the model calculates a larger number of exceedance days for \PM[2.5] compared with observations at CY0002 (47 vs 3 observed) and several Spanish sites, which is related to the uncertainties in windblown dust modelling. The seasonality of \PM[2.5] exceedances is similar to that of \PM[10], with most exceedance days at the Mediterranean sites in summer and at the other sites in winter, spring and autumn. The only difference is that the largest number of \PM[2.5] exceedances at three of four German sites occurred in spring, while much fewer occurred during the cold seasons.
+For \PM[2.5], the model reproduces number of exceedance days at IT0004 (40), with most of then (61 \%) coinciding with the observed ones. However, it calculates 12 exceedance days versus 40 observed at HU0002, only 3 versus 30 observed at DE0044, and no exceedance days versus 26 observed at PL0005. At the Dutch sites, the model slightly underestimates observed \PM[2.5] exceedance days at NL0009 and NL0010, but overestimates those at NL0091 and NL0644 (same as for 2018 reported last year). Similar to \PM[10], the model calculates a larger number of exceedance days for \PM[2.5] compared with observations at CY0002 (47 vs 3 observed) and several Spanish sites, which is related to the uncertainties in windblown dust modelling. The seasonality of \PM[2.5] exceedances is similar to that of \PM[10], with most exceedance days at the Mediterranean sites in summer and at the other sites in winter, spring and autumn. The only difference is that the largest number of \PM[2.5] exceedances at three of four German sites occurred in spring, while much fewer occurred during the cold seasons. As discussed above, much rain in November-December combined with the mild winter temperatures resulted in the absence of major PM episodes in 2019 typical for Europe in winters.
 
-
-\textcolor{blue}{Much rain in November-December combined with the mild winter temperatures, resulted in the absence of major PM episodes in 2019 typical for Europe in winters.} 
+\vspace{5cm}
 
 %\clearpage
 \subsection{Deposition of sulphur and nitrogen} %Hilde to rewrite. Anna to update figures. Done, some final checks on numbers are necessary
