Update on Overleaf.

--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -80,7 +80,8 @@ In 2021, CEIP in co-operation with TNO prepared a list of Parties where it could
 
 %The assessment of the air quality situation in Europe and the source receptor calculations for 2019 made this year have been conducted with the EMEPwREF2.1C emission dataset.
 %official EMEP emissions combined with TNO REF2.1 emissions for the GNFR sector C for PM (EMEPwREF2.1C). 
-The 1999 Gothenburg Protocol lists emission reduction commitments of NO$_x$, SO$_x$, NH$_3$ and NMVOCs for most of the Parties to the LRTAP Convention for the year 2010\COMMENT{WHY DO THEY TALK ABOUT THE 2010 targets and not the 2020 targets?Should we include this at all in the Summary?}. These commitments should not be exceeded in 2010 nor in subsequent years. When considering only reported data, approved adjustments and fuel use data of the respective countries, it can be seen that in the year 2019 North Macedonia could not reduce their \sox emissions below their respective Gothenburg Protocol requirements, and that Croatia and Spain are above their 1999 Gothenburg Protocol ceilings concerning \nhiii. For \nox and NMVOC all countries were below their individual ceilings in year 2019.
+
+%The 1999 Gothenburg Protocol lists emission reduction commitments of NO$_x$, SO$_x$, NH$_3$ and NMVOCs for most of the Parties to the LRTAP Convention for the year 2010\COMMENT{WHY DO THEY TALK ABOUT THE 2010 targets and not the 2020 targets?Should we include this at all in the Summary?}. These commitments should not be exceeded in 2010 nor in subsequent years. When considering only reported data, approved adjustments and fuel use data of the respective countries, it can be seen that in the year 2019 North Macedonia could not reduce their \sox emissions below their respective Gothenburg Protocol requirements, and that Croatia and Spain are above their 1999 Gothenburg Protocol ceilings concerning \nhiii. For \nox and NMVOC all countries were below their individual ceilings in year 2019.
 
 
 
@@ -93,6 +94,7 @@ We analyze trends in air quality for ozone, sulphur dioxide, particulate matter 
 %SOX Wenche
 
 %NOx Hilde
+
 
 %redN Hilde 
 
