--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -100,7 +100,7 @@ EMEP reported data for the European region, then the emissions of both POA and E
 
 
 \section{\label{OBSTrends}{Observations}}
-The observations used have all been reported to EMEP and are openly available from the EBAS database (\url{http://ebas.nilu.no}). The time series have been selected based on statistical criteria as described in section  \ref{Method}. Sites which are situated higher than 2000 m.a.s.l. have been excluded (except DE0003R at 2007 m.a.s.l.) in addition to NO0042G at 474 m.a.s.l. These sites are often measuring above the boundary layer, which is not well represented by a model with a resolution of \resZO. For EC and OC, only observations using the reference method EUSSAR-2 \citep{Cavalli:EUSAAR} has been selected and due to lack of long consistent time series, statistics are only done for the last decade for these compounds. Further, visual inspection of the time series revealed some data sets with very high annual variability and inconsistent development. This can be due to contamination of the samples, change in methods or in the surroundings. Some of these time series have been excluded. Some sites which have moved a very short distance during the time period has been combined into one times series, i.e.: FI0017R and FI0018R, NO0001R and NO0002R, SE0002R and SE0014R, SE0011R and SE0020R. An overview of all the sites that has been used for the different components and periods are found in Table \ref{tab:sites_trend} in Appendix \ref{ch:appx_trends}
+The observations used have all been reported to EMEP and are openly available from the EBAS database (\url{http://ebas.nilu.no}). The time series have been selected based on statistical criteria as described in section  \ref{Method}. Sites which are situated higher than 2000 m.a.s.l. have been excluded (except DE0003R at 2007 m.a.s.l.) in addition to NO0042G at 474 m.a.s.l. These sites are often measuring above the boundary layer, which is not well represented by a model with a resolution of \resZO. For EC and OC, only observations using the reference method EUSAAR-2 \citep{Cavalli:EUSAAR} has been selected and due to lack of long consistent time series, statistics are only done for the last decade for these compounds. Further, visual inspection of the time series revealed some data sets with very high annual variability and inconsistent development. This can be due to contamination of the samples, change in methods or in the surroundings. Some of these time series have been excluded. Some sites which have moved a very short distance during the time period has been combined into one times series, i.e.: FI0017R and FI0018R, NO0001R and NO0002R, SE0002R and SE0014R, SE0011R and SE0020R. An overview of all the sites that has been used for the different components and periods are found in Table \ref{tab:sites_trend} in Appendix \ref{ch:appx_trends}
 
 \section{\label{Method}{Method for calculation of trends}}
 Both observed and modelled trends were processed with the pyaerocom software (\url{https://github.com/metno/pyaerocom}, version XXX) for the following periods: 2000-2019, 2005-2019, 2000-2010, and 2010-2019. All observations were provided via the EBAS database. 
@@ -133,7 +133,7 @@ The trends and their uncertainties for all the individual sites are available fr
 
 \section{\label{sec:Trends_sulfur}Trends in sulfur}
 
-The SO$_x$ emissions have declined by more than 80\% (-4.3\% yr$^{-1}$) within the western EMEP domain (EU27+UK+EFTA countries) the last two decades, and both the observed and modelled trends for all the atmospheric sulfur components show a substantial decrease (Figure~\ref{fig:SOx_trends} and Table ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}), in line with several studies on trends published lately (\cite{aas2019global,TFMM2016, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}). A majority of the time series show significant trends for the 20 year period for all the compounds.
+The SO$_x$ emissions have declined by more than 80\% (-4.3\% yr$^{-1}$) within part of the EMEP domain (EU27+UK+EFTA countries) the last two decades, and both the observed and modelled trends for all the atmospheric sulfur components show a substantial decrease (Figure~\ref{fig:SOx_trends} and Table ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}), in line with several studies on trends published lately (\cite{aas2019global,TFMM2016, Vivanco2018, Theobald2019, Colette2021, Banzhaf2015, torseth2012, Crippa2016}). A majority of the time series show significant trends for the 20 year period for all the compounds (Table ~\ref{tab:so2_stat} - ~\ref{tab:so4dep_stat}).
 
 The spatial distribution of the relative trends (Figure~\ref{fig:Strends_map}) show that the decreases have been quite homogeneous across Europe west of Russia, though somewhat higher in Spain and France and lower in Poland. It has been higher reductions in the primary \soii compared to  secondary \soiv. The greater decrease in \soii compared to secondary sulphate is due to a combine effect of higher oxidation rate (hence more \soii converted to \soiv) and increased dry deposition rate of \soii. The oxidation capacity of the atmosphere have increased as the emissions have decreased \cite{Dalsoren2016}, and the clouds have become less acidic due to less \soii and only slightly decrease in \nhiii, which has increased the oxidation rate of \soii to \soiv via the ozone pathway (\cite{Banzhaf2015, Redington2009}). In addition, less acidity in the environment probably leads to more efficient dry deposition of \soii (\cite{Fowler_et_al:2009}) 
 
@@ -847,11 +847,7 @@ reduction in OC appears somewhat lower at the westernmost and northernmost
 sites (Fig.\ref{fig:OCtrends}). 
 
 
-% From KE .docx. Assume 
-%\begin{figure}
-%\caption{Map showing relative change (\%/yr) in observed and modelled OC (left
-%  panel) and EC (right panel) at 15 EMEP sites across Europe. \label{fig:KEX2}}
-%\end{figure}
+
 
 There was a pronounced seasonal variability in the reduction observed for
 OC (Tab.~\ref{tab:KEX2}, Figs.~\ref{fig:KEX1},\ref{fig:OCarrows}). In winter, the
@@ -864,15 +860,19 @@ observed only for Ispra.
 Figure~\ref{fig:OCarrows} makes it clear that there were large differences in both sign and magnitude of the summertime trends in OC at individual sites, in both modelled and observed results. For the winter trends, Fig.~\ref{fig:OCarrows} shows that essentially all observed wintertime trends were reductions, whereas the modelled trends were more variable and less significant. In summertime the trends can be positive or negative, and are generally not significant.
 
 
-Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the period 2010-2019, and for different seasons. For OC the model substantially underpredicts the yearly concentrations over the whole period (see also Tab.~\ref{tab:KEX2}), and also underpredicts the trends. There is substantial seasonal variation though. Observed reductions in winter (DJF) of -4.2~\%/yr are not reproduced by the model at all (-1.1~\%/yr), though even in winter the observed trends were only significant for six of the 15 sites. In summer the observed trends are very small but negative (-0.03~\%/yr), whereas the model suggests positive trends of 2.1~\%/yr. As noted above (c.f. Fig.~\ref{fig:OCarrows}), the summer trends are very different for individual sites, even with respect to the sign of the change, and one cannot assign much significance to the changes. 
+Fig.~\ref{fig:KEX1} illustrates the statistics of the reductions in OC  over the period 2010-2019, and for different seasons. For OC the model substantially underpredicts the yearly concentrations over the whole period (see also Tab.~\ref{tab:KEX2}), and also underpredicts the trends. There is substantial seasonal variation though. Observed reductions in winter (DJF) of -4.2~\%/yr (Tab.~\ref{tab:KEX2}) are not reproduced by the model at all (-1.1~\%/yr), though even in winter the observed trends were only significant for six of the 15 sites. In summer the observed trends are very small but negative (-0.03~\%/yr), whereas the model suggests positive trends of 2.1~\%/yr. As noted above (c.f. Fig.~\ref{fig:OCarrows}), the summer trends are very different for individual sites, even with respect to the sign of the change, and one cannot assign much significance to the changes. Model-measurement comparison for OC are discussed further in Sect.~\ref{ss:DiscECOC}.
 
+\SKIP{
 The model calculated a
 reduction in OC of -0.6~\%/yr considering all sites, which was noticeably
 less than for the observations (-2.4~\%/yr) (c.f. Tab.~\ref{tab:KEX2}). The model also underpredicted
 the decrease calculated for the observations for each season, thereby
 reproducing the seasonality in trend seen for the observations. A decrease
 in observed OC was calculated for all sites, whereas the model calculated
-an increase, typically <0.5~\%/yr, for four of the sites. These points about model-measurement comparison for OC are discussed further in Sect.~\ref{ss:DiscECOC}.
+an increase, typically <0.5~\%/yr, for four of the sites. 
+} % END SKIP
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -983,7 +983,7 @@ Europe and Western Russia \citep{Yttri2021}, our findings for Birkenes
 are likely to be representative for a larger part of Europe. However,
 changing footprints  for the Birkenes site may also affect both the trends and
 the relative contributions of biomass burning and residential wood combustion (RWC).
-Figure~\ref{fig:gnfrCtrends} shows that for some countries, for example France, GNFR C \pmfine emissions have been in constant decline throughout the 2000s. Declines are seen in other countries from around 2010 onwards also. Thus, abatemement of RWC emissions seem to be progressing for many countries within the Birkenes footprint area, though the magnitude of the contribution from different countries will of course vary from year to year.
+Figure~\ref{fig:gnfrCtrends} shows that for some countries, for example France, GNFR C \pmfine emissions have been in constant decline throughout the 2000s. Declines are seen in other countries from around 2010 onwards also, and most of these (arnitrailty chosen) countries show reduction of ca.~4~\%/yr. Thus, abatemement of RWC emissions seem to be progressing for many countries within the Birkenes footprint area, though the magnitude of the contribution from different countries will of course vary from year to year.
 
 The issues with condensable organics (Sect.~\ref{ss:IssuesECOC}) impact these estimates of \pmfine emissions and their trends also, and Figure~\ref{fig:gnfrCtrends} is a good illustration of this. France is a country which includes condensables, and Germany is one that does not \citep{CONDws2020}. This difference is a major reason for the magnitude of the French GNFR C emissions compared to those of the more highly populated Germany. 
 
@@ -1010,7 +1010,7 @@ for the observations.
 \begin{figure}
     \centering
     \includegraphics[width=12cm,trim=0 0 0 1.5cm,clip]{FIGS_TRENDS/PlotEmisTrends_PM2_5.png}
-    \caption{Trends in \pmfine emissions from GNFR C (mainly residential heating)}
+    \caption{Trends in \pmfine emissions from GNFR C (mainly residential heating). Values in parentheses give relative trends (here linear regression slopes), for the periods 2000-2019 and 2010--2019.}
     \label{fig:gnfrCtrends}
 \end{figure}
 
